differentiate milk vs formula

--- a/PiUWP/BabyReport/BabyReport/MainPage.xaml
+++ b/PiUWP/BabyReport/BabyReport/MainPage.xaml
@@ -19,7 +19,8 @@
             </Grid.RowDefinitions>
 
             <StackPanel Grid.Column="0" Background="#51BF08" Width="400">
-                <Button Content="Fed" Name="btn_fed" Click="btn_fed_Click" Width="300" HorizontalAlignment="Center" Margin="40" FontSize="64"></Button>
+                <Button Content="Formula" Name="btn_fed" Click="btn_fed_Click" Width="300" HorizontalAlignment="Center" Margin="40" FontSize="64"></Button>
+                <Button Content="Milk" Name="btn_milk" Click="btn_milk_Click" Width="300" HorizontalAlignment="Center" Margin="40" FontSize="64"></Button>
                 <Button Content="Pee" Name="btn_pee" Click="btn_pee_Click" Width="300" HorizontalAlignment="Center" Margin="40" FontSize="64"></Button>
                 <Button Content="Poo" Name="btn_poo" Click="btn_poo_Click" Width="300" HorizontalAlignment="Center" Margin="40" FontSize="64"></Button>
             </StackPanel>
