--- a/AndroidXamarin/BabyReport/BabyReport/MainPage.xaml
+++ b/AndroidXamarin/BabyReport/BabyReport/MainPage.xaml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:BabyReport" x:Class="BabyReport.MainPage">
     <StackLayout>
-        <StackLayout Orientation="Horizontal" FlowDirection="LeftToRight" BackgroundColor="#51BF08" x:Name="stk_nav">
-            <Label TextColor="White" Text="Baby Report"></Label>
-            <Image x:Name="btn_ref" WidthRequest="32" MinimumWidthRequest="32" HeightRequest="32" MinimumHeightRequest="32" Source="@drawable/mb_refresh"></Image>
-            <Image x:Name="btn_poo" WidthRequest="32" MinimumWidthRequest="32" HeightRequest="32" MinimumHeightRequest="32" Source="@drawable/mb_poo"></Image>
-            <Image x:Name="btn_pee" WidthRequest="32" MinimumWidthRequest="32" HeightRequest="32" MinimumHeightRequest="32" Source="@drawable/mb_pee"></Image>
-            <Image x:Name="btn_form" WidthRequest="32" MinimumWidthRequest="32" HeightRequest="32" MinimumHeightRequest="32" Source="@drawable/mb_formula"></Image>
-            <Image x:Name="btn_milk" WidthRequest="32" MinimumWidthRequest="32" HeightRequest="32" MinimumHeightRequest="32" Source="@drawable/mb_milk"></Image>
-        </StackLayout>
+        <Grid BackgroundColor="#51BF08">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="64" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="64" />
+                <ColumnDefinition Width="64" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="64" />
+                <ColumnDefinition Width="64" />
+            </Grid.ColumnDefinitions>
+            
+            <Image x:Name="btn_form" WidthRequest="64" MinimumWidthRequest="64" HeightRequest="64" MinimumHeightRequest="128" Source="@drawable/mb_formula" Grid.Row="0" Grid.Column="0"></Image>
+            <Image x:Name="btn_milk" WidthRequest="64" MinimumWidthRequest="64" HeightRequest="64" MinimumHeightRequest="128" Source="@drawable/mb_milk" Grid.Row="0" Grid.Column="1"></Image>
+            <Label TextColor="White" Text="Report" Grid.Row="0" Grid.Column="2" x:Name="txt_title" FontSize="48" HorizontalTextAlignment="Center" HorizontalOptions="Center"></Label>
+            <Image x:Name="btn_poo" WidthRequest="64" MinimumWidthRequest="64" HeightRequest="64" MinimumHeightRequest="128" Source="@drawable/mb_poo" Grid.Row="0" Grid.Column="3"></Image>
+            <Image x:Name="btn_pee" WidthRequest="64" MinimumWidthRequest="64" HeightRequest="64" MinimumHeightRequest="128" Source="@drawable/mb_pee" Grid.Row="0" Grid.Column="4"></Image>
+         </Grid>
+
         <WebView x:Name="view_web" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"></WebView>
     </StackLayout>
 </ContentPage>
